# axum-starter

./: Cargo.toml  README.md
src/: error.rs  main.rs  main_routes.rs
src/web/: mod.rs  routes_login.rs
tests/: quick_dev.rs
