[package]
name = "axum-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.36", features=["full"]}
serde ={version="1", features = ["derive"]}
axum = "0.8.3"
tower-http ={version = "0.6.2", features = ["fs"]} #we need this for file system routes
serde_json={version = "*"}

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1.1"
